test/bad/function_declaration_11.mpp
fun f(a:int):int { return 1; };
fun f(b:real):real { return 1.0; };
